msm8998-common: Workaround VoLTE SIM Slot switching issue
* For some unknown reason, with new ims.apk VoLTE switching doesn't occur
  in real time unless we restart ril-daemon to re-initialize slots.

* Test with this workaround:
        Switch mobile data from one sim to another
        See VoLTE option in data enabled slot.

* Before fix: VoLTE option only available in Slot 1.

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -733,3 +733,6 @@ on property:init.svc.tcpdump=running
 
 on property:init.svc.vendor.ipacm-diag=running
     stop vendor.ipacm-diag
+
+on property:dev.bootcomplete=1
+    restart ril-daemon
