--- a/PocoParts/AndroidManifest.xml
+++ b/PocoParts/AndroidManifest.xml
@@ -66,14 +66,14 @@
                 android:name="com.android.settings.dismiss"
                 android:value="9,13,30" />
             <meta-data
-                android:name="com.android.settings.bg.hint"
-                android:resource="@color/homepage_parts_background" />
-            <meta-data
-                android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.homepage" />
-            <meta-data
                 android:name="com.android.settings.summary"
                 android:resource="@string/advanced_settings_summary" />
+			<meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.system" />
+            <meta-data
+                android:name="com.android.settings.order"
+                android:value="-253" />
         </activity>
 
         <service android:name=".StartAction" />
