sdm845-common: Restore correct usb config during early boot
This lets us use adb logcat during early boot up and also gets rid of
useless usb drivers CD.

Change-Id: Ic106f80e5971e62f882ae669c783757841bab7e9
Signed-off-by: DennySPb <dennyspb@gmail.com>
Signed-off-by: XtremeOrnob <xtreme.ornob@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -130,6 +130,9 @@ on early-boot
     chown system system /mnt/vendor/persist/sensors/registry/config
     chmod 0664 /mnt/vendor/persist/sensors/sensors_settings
 
+on boot && property:persist.sys.usb.config=*
+    setprop sys.usb.config ${persist.sys.usb.config}
+
 on boot
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/type
