sdm845-common: init: get back to default from long-standing VM tweaks
This patch removed the old writeout policy tune which was never touched since
2009. In the meantime, most of Android devices are equipped with over 4GB DRAM
and very fast flash storages like UFS, which becomes more like desktop or
servers in 2009. So, it'd be worth to go back to use the default kernel configs.

Bug: 136483670
Bug: 137190999
Change-Id: I1ebbf9f1f27a921103db51e96a50aadd6ec0dde8
Signed-off-by: Jaegeuk Kim <jaegeuk@google.com>
Signed-off-by: DennySPb <dennyspb@gmail.com>
Signed-off-by: XtremeOrnob <xtreme.ornob@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -716,3 +716,10 @@ on property:init.svc.vendor.ipacm-diag=running
 
 on property:dev.bootcomplete=1
     restart ril-daemon
+
+on property:vendor.post_boot.parsed=1
+
+    # Back to default VM settings
+    write /proc/sys/vm/dirty_expire_centisecs 3000
+    write /proc/sys/vm/dirty_background_ratio 10
+
